Fri Oct 29 19:11:07 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Fix problem with deleting X-VIRUS-STATUS not setting
				correct libmilter settings

Fri Oct 29 02:19:48 CEST 2004 (tk)
----------------------------------
  * clamdscan: update manual page and fix return code for "unknown option"
	       error

Thu Oct 28 09:14:22 BST 2004 (njh)
----------------------------------
  * libclamav/strrcpy.c:	Ensure that assert is only used if
					--enable-debug is given to configure

Wed Oct 27 13:36:14 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Remove X-VIRUS-STATUS on incoming messages
			Plug remote possibility of file descriptor leak
			Return EX_OSERR if fork fails, not EX_TEMPFAIL
			If clamav-milter points to more than one server, ensure
				that the version information for that server is
				added to the header
			Update version information in the watchdog. There may
				therefore be a delay between the server updating
				and this being reflected in the headers

Wed Oct 27 09:30:47 BST 2004 (trog)
-----------------------------------
  * libclamav/htmlnorm.c: extract more HTML references from use with FOLLOWURL

Wed Oct 27 07:36:49 BST 2004 (njh)
----------------------------------
 * libclamav/untar.c:	Handle links to another file already archived, patch
				by "Roger Lucas" <roger@planbit.co.uk>

Sun Oct 24 05:36:39 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:		Handle multipart/knowbot as multipart/mixed
			until syntax documention can be found for this format

Sun Oct 24 04:52:01 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Change encoding guess message from warn to debug
  * clamav-milter:		Validate the length of the server hostnames
				Generate a more useful message than libmilter's
			bind failure message when the two sockets are the same
			named pipe
				SESSION code now on by default
				Use cli_strtokbuf() instead of cli_strtok()